--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,24 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#000000">
+  
+  <style>
+    body {
+		background-color: powderblue;
+	 border-style: solid; border-width: 1px;
+   height:100vh;
+   margin:0;
+   display:flex;
+	}
+    #root
+  {
+	 border-style: solid; border-width: 10px;
+ border-color:green;
+ display:flex;
+ justify-content:center;
+ flex:0.9;
+  }
+  </style>
 	<!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
