--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   
   <style>
     body {
-		background-color: powderblue;
+      border-color:blue;
 	 border-style: solid; border-width: 0px;
    height:100vh;
    margin:0;
