--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,14 @@
    height:100vh;
    margin:0;
    display:flex;
+      justify-content:center;
 	}
     #root
   {
 	 border-style: solid; border-width: 0px;
  border-color:green;
  display:flex;
- justify-content:center;
+ justify-content:flex-start;
  flex:1;
   }
   </style>
