--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,22 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="theme-color" content="#000000">
   
   <style>
     body {
       border-color:blue;
 	 border-style: solid; border-width: 0px;
-   height:100vh;
-   margin:0;
-   display:flex;
-      justify-content:center;
+padding:0;
+				margin:0;
+			 overflow:hidden;
 	}
     #root
   {
 	 border-style: solid; border-width: 0px;
- border-color:green;
- display:flex;
- justify-content:flex-start;
- flex:1;
+    border-color:green;
+	 padding:0; margin:0;
   }
   </style>
 	<!--
